# qtedit4

./: .clang-format  .clang-format-ignore  .codespellignore  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  COPYING.bsd  ChangeLog  Doxyfile  INSTALL  Info.plist  README  README.md  TODO.md  build-appimage.sh  build-dist.sh  build.bat  build.sh  bump-version.py  changelog  codepointer.desktop.in  codepointer.qrc.in  codepointer.rc  com.diegoiast.qtedit4.yaml  configure  get-code.sh  hack.md  make-icons.sh  mingw-build.bat  mingw-clean.bat  org.codepointerapp.codepointer.appdata.xml  org.codepointerapp.codepointer.yml  org.diegoiast.qtedit4.appdata.xml  org.qtedit4.qtedit4.appdata.xml  org.qtedit4.qtedit4.yml  qmdilib.dox  qtedit4.desktop  (+15 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  clang-format.yml  codeql-analysis.yml  codespell.yml
cmake/: CPM.cmake  CreateResources.cmake  icons-breeze.cmake  mold-linker.cmake
data/: html-php.xml  javascript-php.xml
data/colors/: gedit.xml  visual.xml
data/default/: kate.xml  turbo.xml  vim.xml
data/kate/: batch.xml  css-php.xml  pascal.xml
data/qate/: fetch.sh
demos/common/: common.qrc  helpbrowse.h  qexeditor.cpp  qexeditor.h
demos/demo1/: adv-menus.html  demo1.pro  main.cpp  mainwindow.cpp  mainwindow.h
demos/demo2/: demo2.pro  main2.cpp  mainwindow2.cpp
demos/demo3/: main3.cpp
demos/demo4/: main4.cpp  mainwindow4.cpp
demos/demo6/: demo6.pro
demos/plugin-demo/: configdialog.cpp  configdialog.h  iplugin.h  plugin_list.ui  pluginmanager.cpp  pluginmodel.h  richtext.qrc
doc/: kateHightlight.xmi  qtedit2.xmi
doc/html/: a00001.html  a00004.html  a00006.html  a00009.html  a00011.html  a00014.html  a00016.html  a00017.html  a00019.html  a00020.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00029.html  a00030.html  a00031.html  a00034.html  a00035.html  a00036.html  a00039.html  a00046.html  a00047.html  a00048.html  a00049.html  a00050.html  a00051.html  a00052.html  a00053.html  a00054.html  a00055.html  a00064.html  a00065.html  a00066.html  a00073.html  a00074.html  a00075.html  a00076.html  a00077.html  (+122 more)
doc/xml/: a00022.xml  a00023.xml  a00024.xml  a00025.xml  a00026.xml  a00027.xml  a00028.xml  a00029.xml  a00030.xml  a00031.xml  a00032.xml  a00033.xml  a00034.xml  a00035.xml  a00036.xml  a00037.xml  a00038.xml  a00039.xml  a00040.xml  a00041.xml  a00042.xml  a00043.xml  a00044.xml  a00045.xml  a00046.xml  a00047.xml  a00048.xml  a00049.xml  a00050.xml  a00051.xml  a00052.xml  a00053.xml  a00054.xml  a00055.xml  a00056.xml  a00057.xml  a00058.xml  a00059.xml  a00060.xml  a00061.xml  (+101 more)
docs/: release-2025-07.md  release-2025-08.md  release-2025-09.md  release-2025-10.md  release-2025-11.md  release-2025-12.md  release-2026-01-v0.1.0.md  release-2026-02-v0.1.1.md
etc/: qtedit4-kit1.bat  qtedit4-kit1.sh  qtedit4.json
lib/: .clang-format  qmdilib  qtsourceview
lib/qmdilib/: .clang-format  CMakeLists.txt  Doxyfile  build-dist.sh
lib/qmdilib/doc/: qmdilib.xmi
lib/qmdilib/src/: qmdiactiongroup.cpp  qmdiactiongrouplist.h  qmdiclient.cpp  qmdiclient.h  qmdihost.cpp  qmdiserver.h  qmditabwidget.cpp
lib/qtsourceview/: .gitignore  ChangeLog  README.md  qtsourceview.dox  qtsourceview.pro  todo.txt
lib/qtsourceview/src/: qate.pri  qsvte_lib.pro
plugins/help/: help_plg.cpp
plugins/systembrowser/: systembrowser_plg.cpp  systembrowser_plg.h
plugins/texteditor/: texteditor_plg.cpp  texteditor_plg.h
src/: AnsiToHTML.cpp  AnsiToHTML.hpp  GlobalCommands.hpp  Qtedit4MainWindow.cpp  Qtedit4MainWindow.h  configdialog.cpp  configdialog.h  editorsettings.cpp  editorsettings.h  helpdisplay.cpp  helpdisplay.h  linenumberwidget.cpp  linenumberwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mime.types  optionsdialog.cpp  optionsdialog.h  qate_lib.pro  qmdiactiongroup.cpp  qmdiactiongroup.h  qmdiactiongrouplist.cpp  qmdihost.h  qmdimainwindow.h  qmdiserver.cpp  qmditabwidget.h  qsvsh_lib.pro  qsvte.pri  qtedit4.pro  qtedit4.qrc  src.pro  textdisplay.cpp  textdisplay.h  texteditorex.cpp  texteditorex.h
src/plugins/CTags/: CTagsLoader.cpp  CTagsLoader.hpp  CTagsPlugin.cpp  CTagsPlugin.hpp
src/plugins/LSP/: LspClientImpl.cpp  LspClientImpl.hpp  LspPlugin.cpp  LspPlugin.hpp
src/plugins/ProjectManager/: AnsiToHTML.cpp  AnsiToHTML.hpp  BuildRunOutput.ui  CompilerOutputDecoders.cpp  CompilerOutputDecoders.h  GenericItems.cpp  GenericItems.h  LspClientImpl.cpp  LspClientImpl.h  ProjectBuildConfig.cpp  kitdetector.h  (+18 more)
src/qate/: highlighter.cpp  qateblockdata.h
src/qelib/: qecodeeditor.cpp  qecodeeditor.h  qecodehighlighter.cpp  qecodehighlighter.h
src/qexdilib/: qexitabwidget.cpp  qexitabwidget.h  qextabwidget.cpp  qextabwidget.h
src/qmdilib/: actiongroup.cpp  actiongroup.h  actiongrouplist.cpp  actiongrouplist.h  qmdiclient.cpp  qmdiclient.h  qmdihost.cpp  qmdihost.h  qmdiserver.cpp  qmdiserver.h  qmditabwidget.cpp  qmditabwidget.h
src/qsvsh/: qorderedmap.h  qsvcolordef.h  qsvcolordeffactory.cpp  qsvlangdef.h  qsvlangdeffactory.cpp  qsvlangdeffactory.h  qsvsyntaxhighlighter.cpp  qsvsyntaxhighlighter.h
src/qsvte/: qsvtextedit.cpp  qsvtextoperationswidget.h
src/ui/: configdialog.ui  finddialog.ui  inlinefind.ui  inlinegotoline.ui  inlinereplace.ui  optionsdialog.ui  replacedialog.ui
src/widgets/: AutoShrinkLabel.cpp  AutoShrinkLabel.hpp  FilesList.cpp  FilesList.hpp  HistoryLineEdit.cpp  HistoryLineEdit.h  LoadingWidget.cpp  LoadingWidget.hpp  QPathEdit.cpp  QPathEdit.h  SplitTabWidget.cpp  SplitTabWidget.h  bannermessage.ui  bannerwidget.cpp  bannerwidget.h  endlinestyle.h  filesystembrowser.cpp  filesystembrowser.h  filesystembrowser.ui  gotolineform.ui  qmdSplitTab.cpp  qmdSplitTab.h  qmdiSplitTab.cpp  qmdiSplitTab.h  qmdieditor.cpp  qmdieditor.h  qsvtextoperationswidget.cpp  qsvtextoperationswidget.h  replaceform.ui  searchform.ui  textoperationswidget.cpp  textoperationswidget.h  textpreview.cpp  textpreview.h  xmltreemodel.cpp  xmltreemodel.h
tests/: generic-item-complete-test.cpp  generic-item-complete-window.cpp  generic-item-complete-window.h
(+130 files in other folders)
